style(anchors): fix link jumping offset so nav isn't hidden

--- a/app/_assets/stylesheets/page.less
+++ b/app/_assets/stylesheets/page.less
@@ -3,6 +3,11 @@
   border-bottom: 1px solid @gray;
   padding: 50px 0;
 
+  // Needs to be above page-content header margins
+  .container {
+    z-index: 5;
+  }
+
   @media (max-width: 800px) {
     padding: 25px 0;
   }
